--- a/app/views/movies/index.html.haml
+++ b/app/views/movies/index.html.haml
@@ -1,12 +1,13 @@
 -#  This file is app/views/movies/index.html.haml
+
 %h1 All Movies
 
 %table#movies
   %thead
     %tr
-      %th Movie Title
+      %th#thnoo one
       %th Rating
-      %th Release Date
+      %th#thnot Release Date
       %th More Info
   %tbody
     - @movies.each do |movie|
@@ -15,5 +16,5 @@
         %td= movie.rating
         %td= movie.release_date
         %td= link_to "More about #{movie.title}", movie_path(movie)
-
+  
 = link_to 'Add new movie', new_movie_path
